added class PomodoroTimer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="timer-buttons">
             <button class="btn" id="play">PLAY</button>
             <button class="btn" id="pause">PAUSE</button>
-            <button class="btn" id="stop">STOP</button>
+            <button class="btn" id="reset">RESET</button>
         </div>
 
     </div>
@@ -30,6 +30,8 @@
 <footer>
     Sessions: 0 | Breaks: 0
 </footer>
+    <script src="js/jquery.js"></script>
+    <script src="js/PomodoroTimer.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
