added onTick method

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="timer">25:00</div>
 
         <div class="timer-buttons">
-            <button class="btn" id="play">PLAY</button>
+            <button class="btn" id="play">START</button>
             <button class="btn" id="pause">PAUSE</button>
             <button class="btn" id="reset">RESET</button>
         </div>
