added sessions counter and breaks counter

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </article>
 
 <footer>
-    Sessions: 0 | Breaks: 0
+    <span id="sessions">Sessions: 0</span> | <span id="breaks">Breaks: 0</span>
 </footer>
     <script src="js/jquery.js"></script>
     <script src="js/PomodoroTimer.js"></script>
