added counters reset button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>PomodoroTimer</title>
 
+    <link rel="stylesheet" href="css/fontello/css/fontello.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -28,7 +29,7 @@
 </article>
 
 <footer>
-    <span id="sessions">Sessions: 0</span> | <span id="breaks">Breaks: 0</span>
+    <span id="sessions"></span> | <span id="breaks"></span> <i class="icon-arrows-cw" id="counters-reset"></i>
 </footer>
     <script src="js/jquery.js"></script>
     <script src="js/PomodoroTimer.js"></script>
